# Model2HW

./: .gitignore  README.md  pyproject.toml
docs/: agentic-codesign-feasibility-study.md  blog-ideas-and-landscape.md  implementation-checklist.md  progress-log.md  technical-design-document.md
hardware_feasibility/: __init__.py  __main__.py  cli.py  pipeline.py
hardware_feasibility/agents/: __init__.py  kernel_optimizer.py  llm_client.py  orchestrator.py  prompts.py  types.py
hardware_feasibility/analysis/: bandwidth.py  compute.py  decomposition.py  io.py  memory.py  recommender.py  sensitivity.py  sweep.py  verdict.py
hardware_feasibility/evaluation/: __init__.py  accuracy_db.py
hardware_feasibility/hardware/: board_specs.py  matcher.py
hardware_feasibility/models/: architecture_rules.py  hf_config_loader.py
hardware_feasibility/outputs/: json_export.py  report.py
hardware_feasibility/synthesis/: __init__.py  hls_runner.py  report_parser.py  types.py
tests/: conftest.py  test_accuracy_db.py  test_architecture_rules.py  test_bandwidth.py  test_cli.py  test_compute.py  test_decomposition.py  test_extended_hardware.py  test_hardware.py  test_hf_config_loader.py  test_hls_synthesis.py  test_io.py  test_kernel_optimizer.py  test_memory.py  test_orchestrator.py  test_pipeline.py  test_recommender.py  test_sensitivity.py  test_sweep.py  test_verdict.py
tests/fixtures/: sample_csynth.xml
