[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "model2hw"
version = "0.1.0"
description = "Hardware Feasibility Analyzer for LLM inference on accelerators"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
hub = ["huggingface_hub>=0.20"]
dev = ["pytest>=7.0"]

[project.scripts]
model2hw = "hardware_feasibility.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
